--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
     working_dir: /app/
     command: "yarn test"
     environment:
-      - APP_DOMAIN=http://localhost
       - APP_PORT=3333
     volumes:
       - .:/app
@@ -17,7 +16,7 @@ services:
 
   app: &app
     <<: *default
-    command: "yarn start"
+    command: "yarn dev"
     container_name: iupp_node_api
     ports:
       - 3333:3333
