--- a/package.json
+++ b/package.json
@@ -3,23 +3,48 @@
   "version": "0.0.1",
   "description": "The node API for Gladtask project",
   "scripts": {
-    "start": "node -r esm ./server.js",
-    "dev": "nodemon -r esm server",
+    "start": "ts-node ./server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect=0.0.0.0:9229 --exit-child --respawn --transpile-only --ignore-watch node_modules ./server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rodrigo Bastos",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^6.0.1",
-    "eslint-config-google": "^0.13.0",
-    "nodemon": "^1.19.1"
+    "@babel/cli": "^7.12.17",
+    "@babel/core": "^7.12.17",
+    "@babel/node": "^7.12.17",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-decorators": "^7.12.13",
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-typescript": "^7.12.17",
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.9",
+    "@types/uuid": "^8.3.0",
+    "nodemon": "^1.19.1",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.1",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
+    "ts-node-dev": "^1.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "glob": "^7.1.4",
     "http-status-codes": "^1.3.2",
-    "node-pre-gyp": "^0.13.0"
+    "node-pre-gyp": "^0.13.0",
+    "reflect-metadata": "^0.1.13",
+    "uuid": "^8.3.1"
   }
 }
